[package]
edition = "2018"
name = "rcmd_lib"
version = "0.1.0"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.12", features = ["process", "sync", "io-util", "time", "macros"]}
tracing = "0.1"

[dev-dependencies]
tokio = {version = "1.12", features = ["rt-multi-thread"]}
lazy_static = "1.4.0"
tracing-subscriber = "0.2"
