[package]
edition = "2018"
name = "rcmd_lib"
version = "0.1.0"

[dependencies]
tokio = {version = "1.12", features = ["process", "sync", "io-util", "time", "macros"]}
tracing = "0.1"
serde = "1.0.130"
serde_json = "1.0.68"

[dev-dependencies]
lazy_static = "1.4.0"
tokio = {version = "1.12", features = ["rt-multi-thread"]}
tracing-subscriber = "0.2"
